
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int command ;
typedef int FILE ;


 char* AWK ;
 char* GREP ;
 char* OBJDUMP ;
 int fgets (char*,int,int *) ;
 int pclose (int *) ;
 scalar_t__ popen (char*,char*) ;
 int snprintf (char*,int,char*,char*,char const*,char*,char*,char*) ;
 int strtoul (char*,int *,int) ;

int xp_getgot(const char *filename, char *function)
{
 char command[512];
 FILE *file;
 char got[8];

 snprintf(command, sizeof(command), "%s -R %s | %s \"%s\" | %s '{print $1}               '", OBJDUMP, filename, GREP, function, AWK);

 file = (FILE *)popen(command, "r");
 fgets(got, 11, file);
 pclose(file);
 got[8] = '\0';
 return (strtoul(got, ((void*)0), 16));
}
