; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23154.c_xp_getgot.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23154.c_xp_getgot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [52 x i8] c"%s -R %s | %s \22%s\22 | %s '{print $1}               '\00", align 1
@OBJDUMP = common dso_local global i8* null, align 8
@GREP = common dso_local global i8* null, align 8
@AWK = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xp_getgot(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca [512 x i8], align 16
  %6 = alloca i32*, align 8
  %7 = alloca [8 x i8], align 1
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = getelementptr inbounds [512 x i8], [512 x i8]* %5, i64 0, i64 0
  %9 = load i8*, i8** @OBJDUMP, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = load i8*, i8** @GREP, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = load i8*, i8** @AWK, align 8
  %14 = call i32 @snprintf(i8* %8, i32 512, i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str, i64 0, i64 0), i8* %9, i8* %10, i8* %11, i8* %12, i8* %13)
  %15 = getelementptr inbounds [512 x i8], [512 x i8]* %5, i64 0, i64 0
  %16 = call i64 @popen(i8* %15, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %17 = inttoptr i64 %16 to i32*
  store i32* %17, i32** %6, align 8
  %18 = getelementptr inbounds [8 x i8], [8 x i8]* %7, i64 0, i64 0
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @fgets(i8* %18, i32 11, i32* %19)
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @pclose(i32* %21)
  %23 = getelementptr inbounds [8 x i8], [8 x i8]* %7, i64 0, i64 8
  store i8 0, i8* %23, align 1
  %24 = getelementptr inbounds [8 x i8], [8 x i8]* %7, i64 0, i64 0
  %25 = call i32 @strtoul(i8* %24, i32* null, i32 16)
  ret i32 %25
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, i8*, i8*, i8*, i8*) #1

declare dso_local i64 @popen(i8*, i8*) #1

declare dso_local i32 @fgets(i8*, i32, i32*) #1

declare dso_local i32 @pclose(i32*) #1

declare dso_local i32 @strtoul(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
